[package]
name = "benchmarks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"
description = "Benchmarks for typed_floats using Criterion."
publish = false

[dev-dependencies]
criterion = "0.7"

[dev-dependencies.typed_floats]
path = "../typed_floats"

[lib]
# Benchmarks are handleled by Criterion
bench = false

[[bench]]
name = "criterion"
harness = false
