[package]
name = "sound_floats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aquamarine = "0.3.2"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0"}
generate_sound_floats = { path = "../generate_sound_floats" }

[features]
serde = ["dep:serde"]