[package]
name = "typed_floats_macros"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Crate only used to generate the `typed_floats` crate."
repository = "https://github.com/tdelmas/typed_floats"
readme = "./README.md"

[lib]
proc-macro = true

[features]
std = []

[dependencies]
quote = "1.0"
syn = { version = "2.0" }
proc-macro2 = "1.0"
