[package]
name = "typed_floats_macros"
description = "Crate only used to generate the `typed_floats` crate."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "./README.md"
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[features]
std = []
libm = []

[dependencies]
quote = "1.0"
syn = { version = "2.0" }
proc-macro2 = "1.0"
rustversion = "1.0.20"
