[package]
name = "typed_floats_macros"
description = "Crate only used to generate the `typed_floats` crate."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "./README.md"
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true
# Benchmarks are handleled by Criterion
bench = false

[features]
std = []
libm = []

[dependencies]
quote = "1.0"
syn = { version = "2.0" }
proc-macro2 = "1.0"
rustversion.workspace = true

[lints.rust]
dead-code = { level = "deny", priority = 1 }
missing_docs = { level = "deny", priority = 1 }
unsafe_op_in_unsafe_fn = { level = "deny", priority = 1 }
unused_crate_dependencies = { level = "deny", priority = 1 }
warnings = { level = "deny", priority = 0 }

[lints.clippy]
cargo        = { priority = -1, level = "deny" }
complexity   = { priority = -1, level = "deny" }
correctness  = { priority = -1, level = "deny" }
suspicious   = { priority = -1, level = "deny" }
style        = { priority = -1, level = "deny" }
perf         = { priority = -1, level = "deny" }
# pedantic     = { priority = -1, level = "deny" }
# nursery      = { priority = -1, level = "deny" }
# restriction  = { priority = -1, level = "deny" }
