[package]
name = "typed_floats_tests"
version = "0.2.4"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Types for handling floats with type checking at compile time."
repository = "https://github.com/tdelmas/typed_floats"
readme = "./README.md"
keywords = []

[dependencies]
typed_floats_macros = { version = "=0.2.4", path = "../typed_floats_macros" }
typed_floats = { version = "=0.2.4", path = "../typed_floats" }

